6711100: 64bit fastdebug server vm crashes with assert(_base == Int,"Not an Int")

Insert CastII nodes to narrow type of load_array_length() node

Reviewed-by: never, kvn